# vtt_2x

./: .gitignore  Cargo.toml  README.md  srt_3x
src/: filesystem.rs  lib.rs  main.rs
src/output/: merge.rs  mod.rs
src/parser/: html.rs  mod.rs  vtt.rs
src/types/: mod.rs  timing.rs
src/types/caption/: message.rs  mod.rs  timing.rs
src/types/chat/: message.rs  mod.rs  timing.rs
src/verifier/: consistency.rs  mod.rs  order.rs
