[package]
name = "vtt_2x"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
description = "Merges and doubles speed for subtitles"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
